Fix download button in IE6 (what?!?) Bug 739730 - [Bedrock] [IE6] Download button stretches across the length of the page

--- a/media/css/sandstone/buttons.less
+++ b/media/css/sandstone/buttons.less
@@ -162,11 +162,17 @@
         margin-right: 5px;
     }
     .download-content {
+        .inline-block;
         margin-left: -25px;
         background-image: url(/media/img/sandstone/buttons/firefox-small.png);
         height: 52px;
-        padding: 0 24px 0 65px;
+        padding: 0 20px 0 65px;
+        overflow: visible;
     }
+}
+
+.lt-ie7 .download-button-small .download-link .download-content {
+    margin-left: 0;
 }
 
 
